--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,4 +8,16 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+    
+    --color-primary-50: #f5f3ff;
+    --color-primary-100: #ede9fe;
+    --color-primary-200: #ddd6fe;
+    --color-primary-300: #c4b5fd;
+    --color-primary-400: #a78bfa;
+    --color-primary-500: #8b5cf6;
+    --color-primary-600: #613ed9;
+    --color-primary-700: #4c2db8;
+    --color-primary-800: #3e2396;
+    --color-primary-900: #331c7a;
+    --color-primary-950: #1e0f4a;
 }
